--- a/VirtualGlasses/VirtualGlasses/css/index.css
+++ b/VirtualGlasses/VirtualGlasses/css/index.css
@@ -1,39 +1,42 @@
 /* GLOBAL */
-*{
+* {
     box-sizing: border-box;
 }
-body{
+
+body {
     background: #f1f1f1;
-    
+
 }
 
 /* MAIN CSS */
-.vglasses__left{
+.vglasses__left {
     background-color: white;
     padding: 20px 40px;
-    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2), 0 4px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.vglasses__left .col-4{
+
+.vglasses__left .col-4 {
     align-self: center;
 }
-.vglasses__items{
+
+.vglasses__items {
     cursor: pointer;
 }
 
-.vglasses__right{
-    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2), 0 4px 20px 0 rgba(0,0,0,0.19);
+.vglasses__right {
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.vglasses__model{
+.vglasses__model {
     background-image: url('../img/model.jpg');
     background-position: center top;
     background-size: cover;
     height: 600px;
     position: relative;
-    
+
 }
 
-.vglasses__model img{
+.vglasses__model img {
     top: 25%;
     left: 20%;
     width: 238px;
@@ -41,32 +44,59 @@ body{
     opacity: 0.9;
 }
 
-.vglasses__card{
+.vglasses__card {
     position: relative;
     overflow: hidden;
     background-color: white;
 }
 
-.vglasses__info{
+.vglasses__info {
     position: absolute;
-    bottom:0;
+    bottom: 0;
     left: 0;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
     color: white;
     padding: 20px;
-   display: none;
+    display: block;
+    opacity: 0;
+    transition: all 1s linear;
 }
 
-#glasses{
+.hidden {
+    display: block;
+}
+
+.unhidden {
+    display: none;
+}
+
+.visuallyhidden {
+    opacity: 1;
+}
+
+
+
+#glasses {
     transition: all 0.5s;
 }
 
 @-webkit-keyframes fadeIn {
-    from { opacity: 0; }
-      to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
+
 @keyframes fadeIn {
-    from { opacity: 0; }
-      to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
